# HMC

./: .gitignore  .gitmodules  CMakeLists.txt  Install_ucx.md  MANIFEST.in  README.md  README_zh.md  build.sh  build_with_python.sh  client.sh  newGPU.md  performanceTest_client.csv  server.sh  setup.py  test.sh
apps/coll_app/: CMakeLists.txt  main.cpp
apps/comm_app/: CMakeLists.txt  comm_client.cpp  comm_server.cpp  mem_test.cpp
apps/driver_interface_test/: CMakeLists.txt  main.cpp
apps/mem/: build.sh  main.cpp
apps/python_app/: README.md  client.py  collective.py  collective_gpu.py  multi-nodes-multi-gpus.sh  perf.py  perf_rocm.py  server.py
apps/rdma_app/: CMakeLists.txt  client.cpp  mem.cpp  server.cpp
apps/ucx_app/: CMakeLists.txt  ucx_client.cpp  ucx_mem.cpp  ucx_server.cpp
apps/uhm_app/: CMakeLists.txt  README.md  client.cpp  server.cpp
cmake/: FindHuawei.cmake  FindMPI.cmake  FindMUSA.cmake  FindProtoBuf.cmake  FindUcx.cmake
docs/: developer_guide.md  howToDev.md
hddt/: __init__.py
hmc/: __init__.py  collective.py
include/: coll.h  hddt.h  hmc.h  mem.h  status.h
python/: README.md  hddt_py.cpp  hmc_py.cpp  test_send_recv.py
scripts/: auto_fix_roce_env.sh
src/: communicator.cpp  design.md  mpioob.cpp  test_py.cpp
src/coll/: coll.cpp  coll_algorithm.cpp
src/composer/: composer.h
src/exec/: controller.cpp  parser.h  proto_parser.cpp
src/mem/: cuda_memory.cpp  hddt_memory.cpp  host_memory.cpp  huawei_memory.cpp  mem_type.h  neuware_memory.cpp  rocm_memory.cpp
src/memories/: cuda_memory.cpp  hddt_memory.cpp  host_memory.cpp  huawei_memory.cpp  mem_type.h  moore_memory.cpp  neuware_memory.cpp  rocm_memory.cpp
src/net/: communicator.cpp  conn_manager.cpp  net.h  net_rdma.h  net_ucx.h  rdma_client.cpp  rdma_endpoint.cpp  rdma_server.cpp  ucx_client.cpp  ucx_endpoint.cpp  ucx_server.cpp
src/network/: communicator.cpp  conn_buffer.cpp  conn_manager.cpp  net.h  net_rdma.h  net_ucx.h  rdma_client.cpp  rdma_endpoint.cpp  rdma_server.cpp  socket_ctrl.cpp  ucx_client.cpp  ucx_endpoint.cpp  ucx_server.cpp
src/resource_manager/: driver_manager.h  driver_manager_gpu.cpp  driver_manager_rdma.cpp  gpu_interface.cpp  gpu_interface.h  mem_type.h
src/rm/: driver.h  driver_gpu.cpp  driver_manager.h  driver_manager_gpu.cpp  driver_manager_rdma.cpp  driver_rdma.cpp  gpu_interface.cpp  gpu_interface.h
src/utils/: env.h  log.h  proto.h  signal.cpp  signal_handle.h  status.cpp
src/utils/protobuf/: README.md  hddt.pb.cc  hddt.pb.h  hddt.proto
tests/: CMakeLists.txt  huawei_memory_test.cpp
tests/mem/: device_memory_test.cpp  host_memory_test.cpp
